--- a/css/style.css
+++ b/css/style.css
@@ -108,6 +108,10 @@ a:focus {
     margin-left: 0;
 }
 
+/**********************************/
+/****** Hakerthon container ******/
+/**********************************/
+
 
 /**********************************/
 /****** Loader & Back to Top ******/
