was working on team.htmkl

--- a/css/style.css
+++ b/css/style.css
@@ -312,8 +312,8 @@ a:focus {
 
 .navbar .navbar-brand {
     margin: 0;
-    width: 800px;
-    padding-right: 100px;
+    width: 700px;
+    padding-right: 00px;
 }
 
 .navbar .navbar-brand img {
@@ -451,6 +451,11 @@ a:focus {
     .donate-pulse-button {
         padding: 6px 10px;
         font-size: 12px;
+    }
+    .navbar .navbar-brand {
+        margin: 0;
+        width: 400px;
+        padding: 0;
     }
 }
 
