--- a/css/style.css
+++ b/css/style.css
@@ -3205,6 +3205,17 @@ h1.display-2 {
 
 
 
+.closeVid {
+    position: absolute;
+    top: 15px;
+    right: 35px;
+    color: #fff;
+    font-size: 40px;
+    font-weight: bold;
+    z-index: 1000; /* Ensure it's on top */
+    cursor: pointer;
+}
+
 
 
 
