--- a/css/style.css
+++ b/css/style.css
@@ -3268,7 +3268,12 @@ h1.display-2 {
     cursor: pointer;
 }
 
-
+/* Full-screen video */
+.modal-content video {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Ensure the video covers the entire modal */
+}
 
 
 
