--- a/css/style.css
+++ b/css/style.css
@@ -1108,7 +1108,7 @@ a:focus {
 /*******************************/
 /********** About CSS **********/
 /*******************************/
-.about {
+.about1 {
     position: relative;
     width: 100%;
     padding: 45px 0;
