--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,7 @@ a {
 
 
 
+
 a:hover,
 a:active,
 a:focus {
@@ -175,31 +176,6 @@ a:focus {
     border-radius: 50%;
     -webkit-animation: spin 2s linear infinite;
     animation: spin 2s linear infinite;
-}
-
-#supported-projects {
-    padding-top: 90px; /* Adjust this value as needed */
-    margin-top: -90px; /* Adjust this value to compensate */
-}
-
-#about{
-    padding-top: 130px; /* Adjust this value as needed */
-    margin-top: -130px; /* Adjust this value to compensate */
-}
-
-#about1{
-    padding-top: 90px; /* Adjust this value as needed */
-    margin-top: -90px; /* Adjust this value to compensate */
-}
-
-#events{
-    padding-top: 90px; /* Adjust this value as needed */
-    margin-top: -90px; /* Adjust this value to compensate */
-}
-
-#donate{
-    padding-top: 160px; /* Adjust this value as needed */
-    margin-top: -160px; /* Adjust this value to compensate */
 }
 
 @-webkit-keyframes spin {
@@ -408,17 +384,6 @@ a:focus {
     background: #f8f9fa;
 }
 
-/* Make the dropdown only appear on hover */
-.nav-item.dropdown:hover .dropdown-menu {
-    display: block;
-}
-
-/* Prevent the dropdown link from being clickable */
-.nav-link.dropdown-toggle {
-    pointer-events: none;
-    cursor: default;
-}
-
 
 
 @media (min-width: 992px) {
@@ -518,7 +483,7 @@ a:focus {
     }
     .navbar .navbar-brand {
         margin: 0;
-        width: 200px;
+        width: 400px;
         padding: 0;
     }
 }
@@ -583,8 +548,9 @@ a:focus {
 .carousel {
     position: relative;
     width: 100%;
+    min-height: 500px;
     background: #ffffff;
-    margin-bottom: 50px;
+    margin-bottom: 45px;
 }
 
 .carousel .container-fluid {
@@ -642,7 +608,7 @@ a:focus {
     color: #ffffff;
     font-size: 60px;
     font-weight: 700;
-   
+    margin-bottom: 20px;
 }
 
 .carousel .carousel-text p {
@@ -796,9 +762,8 @@ a:focus {
         letter-spacing: 0;
     }
 
-    .carousel .carousel-text p {        
-        font-size: 12px;    
-        padding: 0 50px;    
+    .carousel .carousel-text p {
+        font-size: 12px;
     }
 }
 
@@ -845,54 +810,7 @@ a:focus {
 
     .carousel .carousel-text-left p {
         font-size: 12px;
-        margin-left: 100px;        
-    }
-    
-}
-
-/* Adjustments for small screens */
-@media (max-width: 575.98px) {
-    .carousel .carousel-img {
-        height: 50vh; /* Adjust as needed for small screen */
-        min-height: 200px; /* Minimum height for small screens */
-    }
-
-    .carousel .carousel-img img {
-        height: 100%;
-        object-fit: cover;
-    }
-
-    .carousel .carousel-img::after {
-        height: 100%; /* Ensure the overlay covers the entire image */
-    }
-}
-
-@media (max-width: 575.98px) {
-    .carousel .carousel-btn .btn.btn-custom {
-        font-size: 10px;
-        padding: 6px 10px; /* Further reduce button size for smaller screens */
-    }
-
-    .carousel .owl-nav {
-        top: calc(50% - 15px); /* Further adjust the position */
-        height: 30px;
-    }
-
-    .carousel .owl-nav .owl-prev, 
-    .carousel .owl-nav .owl-next {
-        width: 30px;
-        height: 30px;
-        font-size: 14px; /* Smallest icon size for mobile devices */
-    }
-
-    #videoModal .modal-dialog {
-        max-width: 400px;
-        margin: 20px auto 0 auto; /* Further reduce margins */
-    }
-
-    #videoModal .close {
-        font-size: 20px; /* Smallest size for close button */
-        top: -20px;
+        margin-left: 100px;
     }
 }
 
@@ -917,7 +835,7 @@ a:focus {
     display: flex;
     align-items: flex-start; /* Aligns content to the top */
     justify-content: flex-end; /* Aligns content to the left */
-    
+    height: 100%; /* Ensure container takes full height */
 }
 
 .page-header .container h2 {
@@ -1056,21 +974,13 @@ a:focus {
 
 @media (max-width: 767.98px) {
     .section-header h2 {
-        font-size: 35px;
+        font-size: 40px;
     }
 }
 
 @media (max-width: 575.98px) {
     .section-header h2 {
-        font-size: 20px;
-    }
-    .about-us-p
-    {
-        font-size: 12px;
-    }
-    .event-content
-    {
-        
+        font-size: 35px;
     }
 }
 
@@ -1108,7 +1018,7 @@ a:focus {
 /*******************************/
 /********** About CSS **********/
 /*******************************/
-.about1 {
+.about {
     position: relative;
     width: 100%;
     padding: 45px 0;
@@ -1116,7 +1026,7 @@ a:focus {
 }
 
 .about .section-header {
-
+    margin-bottom: 30px;
     margin-left: 0;
 }
 
@@ -1201,7 +1111,7 @@ a:focus {
     width: 100%;
     display: flex;
     justify-content: space-between;
-    margin-bottom: 10px;
+    margin-bottom: 45px;
     transition: .3s;
 }
 
@@ -1257,44 +1167,14 @@ a:focus {
 }
 
 
-
-
-@media (max-width: 575.98px) {
-    .row {
-        display: flex;
-        flex-direction: column; /* Stack columns vertically */
-    }
-    
-    .col-lg-4, .col-md-6 {
-        width: 100%; /* Ensure each column takes full width */
-        margin-bottom: 15px; /* Add some spacing between rows */
-    }
-    
-    .service-item {
-        text-align: center; /* Center-align text and icons */
-    }
-    
-    .service-icon {
-        font-size: 24px; /* Adjust icon size if needed */
-    }
-    
-    .service-text h3 {
-        font-size: 20px; /* Adjust heading size if needed */
-    }
-}
-
-
 /*******************************/
 /********* Donate CSS **********/
 /*******************************/
-
 .donate {
     position: relative;
     width: 100%;
     margin: 45px 0;
-    background-color: rgba(0, 0, 0, 0.5);
-    transition: background-color 0.3s ease-in-out, margin 0.3s ease-in-out;
-   
+    background: rgba(0, 0, 0, .5);
 }
 
 .donate .donate-content {
@@ -1400,33 +1280,6 @@ a:focus {
     box-shadow: inset 0 0 0 30px #ffffff;
 }
 
-
-/* Medium devices (tablets, 768px to 991.98px) */
-@media (max-width: 991.98px) {
-    .donate {
-        margin: 35px 0;
-        background-color: rgba(0, 0, 0, 0.6); /* Slightly lighter background for medium screens */
-       
-    }
-}
-
-/* Small devices (landscape phones, 576px to 767.98px) */
-@media (max-width: 767.98px) {
-    .donate {
-        margin: 25px 0;
-        background-color: rgba(0, 0, 0, 0.6); /* Lighter background for small screens */
-       
-    }
-}
-
-/* Extra small devices (portrait phones, less than 576px) */
-@media (max-width: 575.98px) {
-    .donate {
-        margin: 15px 0;
-        background-color: rgba(0, 0, 0, 0.6); /* Even lighter background for extra small screens */
-        
-    }
-}
 
 
 /*******************************/
@@ -1581,10 +1434,18 @@ a:focus {
    
 }
 /* Sparkles*/
-
+.facts .tenor-gif-embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 50%;
+    height: 100%;
+    pointer-events: none; /* Make the GIF non-interactive */
+    z-index: 10;
+}
 
 .facts .facts-text {
-    margin-left: 30px;
+    padding-left: 10px;
     
 }
 
@@ -1612,7 +1473,7 @@ a:focus {
 
 .facts .facts-text h3.facts-dollar::after {
     content: "R";
-    left: -17px;
+    left: -18px;
 }
 
 .facts .facts-text p {
@@ -1749,32 +1610,7 @@ a:focus {
     width: calc(100% - 95px);
 }
 
-.testimonial .testimonial-name h3 {
-    font-size: 20px;
-    font-weight: 600;
-    margin-bottom: 5px;
-}
-
-.testimonial .testimonial-name p {
-    margin: 0;
-    font-style: italic;
-}
-
-.testimonial .testimonial-text p {
-    margin: 0;
-}
-
-.testimonial .owl-dots {
-    margin-top: 15px;
-    text-align: center;
-}
-
-.testimonial .owl-dot {
-    display: inline-block;
-    margin: 0 5px;
-    width: 12px;
-    height: 12px;
-    border-radius: 0;
+.testimonial .testimonial-name h3 yyorder-radius: 0;
     background: #FDBE33;
 }
 
@@ -2674,49 +2510,25 @@ a:focus {
     background: #dc0000;
     z-index: 1000; /* Higher z-index ensures it stays above other elements */
     padding: 40px 0; /* Add padding if needed */
-    display: flex;
-    flex-direction: column;
-    align-items: center; /* Center the contents */
-    justify-content: center;
-    /* Align text in the center */
 
 }
 
-.footer .container {
-    max-width: 1200px;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.footer .row {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: flex-start;
-    flex-wrap: wrap;
-    width: 100%;
-    margin-bottom: -45px;
-}
 .footer .footer-contact,
 .footer .footer-link,
 .footer .footer-newsletter {
     position: relative;
     margin-bottom: 45px;
     color: #ffffff;
-    width: 100%;
-    max-width: 300px;
 }
 
 .footer .footer-contact h2,
 .footer .footer-link h2,
 .footer .footer-newsletter h2 {
-    margin-bottom: 10px;
+    margin-bottom: 30px;
     font-size: 22px;
     font-weight: 700;
     color: #FDBE33;
-    /* text-align: center; */
+    
 }
 
 .footer .footer-link a {
@@ -2724,13 +2536,13 @@ a:focus {
     margin-bottom: 10px;
     color: #ffffff;
     transition: .3s;
-    text-decoration: none; position: relative; /* Ensure relative positioning to place bullet icons */
-    padding-left: 20px;
+    text-decoration: none; 
+    
 }
 
 .footer .footer-link a::before {
     position: relative;
-    content: "\2022";
+    content: "\f105";
     font-family: "Trebuchet MS";
     font-weight: 900;
     margin-right: 10px;
@@ -2750,16 +2562,12 @@ a:focus {
 .footer .footer-social {
     position: relative;
     margin-top: 20px;
-    display: flex;
-    justify-content: center; /* Center social icons horizontally */
-    gap: 10px; /* Add some space between icons */
 }
 
 .footer .footer-social a {
     width: 40px;
     height: 40px;
     padding: 6px 0;
-    text-align: center;
 }
 
 .footer .footer-social a {
